using unminifeied file otherwise we have charset problems...

--- a/graphiql-spring-boot-autoconfigure/src/main/resources/META-INF/resources/index.html
+++ b/graphiql-spring-boot-autoconfigure/src/main/resources/META-INF/resources/index.html
@@ -19,7 +19,7 @@
     <script src="/webjars/react-dom/15.5.4/dist/react-dom.min.js"></script>
 
     <link rel="stylesheet" href="/webjars/graphiql/0.10.1/graphiql.css" />
-    <script src="/webjars/graphiql/0.10.1/graphiql.min.js"></script>
+    <script src="/webjars/graphiql/0.10.1/graphiql.js"></script>
 
 </head>
 <body>
